Fix spacing on the "Team plans" button

--- a/css/inner/inner.less
+++ b/css/inner/inner.less
@@ -111,7 +111,7 @@ body {
    }
 
    #team-button {
-      margin-left: 130px;
+      margin-left: 95px;
    }
 
    #sources {
